Fix: Move database migrations to start script

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && prisma migrate deploy && next build",
-    "start": "next start",
+    "build": "prisma generate && next build",
+    "start": "prisma migrate deploy && next start",
     "seed": "node -r @swc-node/register prisma/seed.ts",
     "lint": "next lint",
     "postinstall": "prisma generate"
