--- a/package.json
+++ b/package.json
@@ -11,32 +11,29 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@headlessui/react": "^2.2.1",
-    "@prisma/client": "^6.6.0",
-    "bcryptjs": "^3.0.2",
-    "date-fns": "^4.1.0",
-    "firebase": "^11.6.0",
-    "moment": "^2.30.1",
-    "next": "15.3.0",
-    "next-auth": "^4.24.11",
-    "react": "^19.0.0",
-    "react-big-calendar": "^1.18.0",
-    "react-dom": "^19.0.0",
-    "resend": "^4.3.0",
-    "zod": "^3.24.2"
+    "@headlessui/react": "^1.7.17",
+    "@prisma/client": "^5.7.1",
+    "bcryptjs": "^2.4.3",
+    "date-fns": "^2.30.0",
+    "next": "14.0.4",
+    "next-auth": "^4.24.5",
+    "react": "^18.2.0",
+    "react-big-calendar": "^1.8.5",
+    "react-dom": "^18.2.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-big-calendar": "^1.16.1",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.0",
-    "prisma": "^6.6.0",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "@types/node": "^20.10.5",
+    "@types/react": "^18.2.45",
+    "@types/react-big-calendar": "^1.8.7",
+    "@types/react-dom": "^18.2.18",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "14.0.4",
+    "postcss": "^8.4.32",
+    "prisma": "^5.7.1",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.3.3"
   }
 }
