--- a/railway.toml
+++ b/railway.toml
@@ -1,6 +1,5 @@
 [build]
 builder = "nixpacks"
-buildCommand = "npm ci && npm run build"
 
 [deploy]
 startCommand = "npm run start"
@@ -13,10 +12,7 @@ nixPkgs = ["nodejs", "npm"]
 cmds = ["npm config set fetch-retry-maxtimeout 600000"]
 
 [phases.build]
-cmds = ["npm ci --production=false"]
-
-[phases.install]
-cmds = ["npm run build"]
+cmds = ["npm ci --production=false", "npm run build"]
 
 [phases.cleanup]
 cmds = ["npm prune --production"] 
