--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.5",
     "react-dom": "^18.2.0",
+    "resend": "^2.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
