--- a/railway.toml
+++ b/railway.toml
@@ -12,7 +12,7 @@ nixPkgs = ["nodejs", "npm"]
 cmds = ["npm config set fetch-retry-maxtimeout 600000"]
 
 [phases.build]
-cmds = ["npm ci --production=false", "npm run build"]
+cmds = ["npm install", "npm run build"]
 
 [phases.cleanup]
 cmds = ["npm prune --production"] 
