--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && prisma migrate deploy && prisma db seed && next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "seed": "node -r @swc-node/register prisma/seed.ts",
     "lint": "next lint",
